# fastapi-app

./: .env  .gitignore  README.md  alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2a9980800bf4_create_profile_table.py  8d91c4b7c5ae_create_posts_table.py  bf596b706e4b_create_pruducts_table.py  ec55394bd409_create_users_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
