[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Valery Shcherbakov <val032606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-decouple = "^3.8"
pydantic = {extras = ["email"], version = "^2.7.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
